<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:background="@color/background_calculator">

    <EditText
        android:id="@+id/display_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/calculator_text"
        android:textColor="@color/black"
        android:textSize="65sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/line_color" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_one"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_two"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_three"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/sign_div"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_four"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_five"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_six"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/sign_sub"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_seven"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_eight"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_nine"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/sign_add"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/sign_clear"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/number_zero"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/decimal_point"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/sign_resolve"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>

</LinearLayout>